--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>App</title>
+    <title>talentlab</title>
+
+    <link href="https://fonts.googleapis.com/css?family=Arimo" rel="stylesheet">
+
   </head>
   <body>
     <div id="app"></div>
