--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>talentlab</title>
 
+    <link href='https://fonts.googleapis.com/css?family=Material+Icons' rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Arimo" rel="stylesheet">
 
   </head>
