Add google tag manger code

--- a/client/index.html
+++ b/client/index.html
@@ -3,15 +3,18 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>talentlab</title>
 
+  <script>
+    window.$gtm_id = '{{GOOGLE_TAG_MANAGER_CONTAINER_ID}}';
+  </script>
+
+  <title>talentlab</title>
   <link href='https://fonts.googleapis.com/css?family=Material+Icons' rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Rubik:300,400" rel="stylesheet" type="text/css">
 
   <style>
 body{background:#fafafa;}.center{position:absolute;left:50%;top:50%;-webkit-transform:translate(-50%,-50%);transform:translate(-50%,-50%)}.lds-dual-ring{display:inline-block;width:64px;height:64px}.lds-dual-ring:after{content:" ";display:block;width:46px;height:46px;margin:1px;border-radius:50%;border:5px solid #FD6E22;border-color:#FD6E22 transparent;animation:lds-dual-ring 1.2s linear infinite}@keyframes lds-dual-ring{0%{transform:rotate(0)}100%{transform:rotate(360deg)}}
   </style>
-
 </head>
 <body>
 <div id="app">
